added voltage-divider and circuit.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,8 @@
             </div>
         </nav>
         <div class="text-center">
-            <img src='data:image/png;base64,{data}' />
+            <h1>{{title}}</h1>
+            <img class="img-thumbnail w-50" src='data:image/png;base64,{{data}}' />
         </div>
     </div>
 
