--- a/app/templates/output.html
+++ b/app/templates/output.html
@@ -3,8 +3,8 @@
 <div class="text-center">
     <h1>{{ args.title }}</h1>
     <img src={{ args.imgUrl }} class="rounded m-2">
-    {% if image %}
-        <img class="img-thumbnail w-50" src='data:image/png;base64,{{data}}' /> 
+    {% if args.inputs %}
+        <h4 class="m-2">{{ args.inputs }}</h4>
     {% endif %} 
     {% if args.output %} 
         {% for key, value in args.output.items() %}
@@ -12,6 +12,9 @@
                 <h2> Node {{key}} : {{value}}</h2>
             </div>
         {% endfor %} 
+    {% endif %}
+    {% if args.plot %}
+        <img class="img-fluid" src='data:image/png;base64,{{args.plot}}'/>
     {% endif %}
       
 
