--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Roboto+Mono:wght@400;500;700&display=swap');
+body {
+    font-family: 'Roboto Mono', monospace;
+}
+
 .container-fluid {
     margin: 0;
     height: 100vh;
     width: 100%;
 }
 
-.img-thumbnail {
-    height: 800px;
-    width: 400px;
+.display-1 {
+    font-family: 'DotGothic16', sans-serif;
 }
