--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,61 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }} ">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>ez-sim</title>
-</head>
-
-<body>
-    <div class="container-fluid m-0 p-0">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid d-flex align-items-center">
-                <h1 class='mb-3'><a class="navbar-brand" href="#">ez-sim</a></h1>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Choose Circuit
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                {% for key,value in args.list.items() %}
-                                    <li><a class="dropdown-item" href="{{ url_for('index', item=value) }}">{{ value }}</a></li>
-                                {% endfor %}
-                                
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        {% block circuit %}{% endblock %}
+{% extends 'base.html' %}
+{% block circuit %}
+<div class="text-center">
+    <h1 class="display-1" style="font-family: 'DotGothic16', sans-serif;">ez-sim</h1>
+    <img class="img-fluid w-25 m-5" src="https://lukaszadam.com/assets/downloads/javascript_illustration.svg" class="rounded m-2">
+    <p class="font-monospace mx-auto my-0 fs-4">An online SPICE simulator built on top of PySpice.</p>
+    <p class="font-monospace mx-auto my-0 fs-4">Just select the circuit type and give the required inputs!</p>
+    <div class="dropdown m-5">
+        <a class="btn btn-dark btn-lg dropdown-toggle px-3 py-2" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            Choose Circuit
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            {% for key,value in args.list.items() %}
+                <li><a class="dropdown-item" href="{{ url_for('index', item=value) }}">{{ value }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
-
-
-
-
-
-
-
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
