added clipper circuits

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block circuit %}
 <div class="text-center">
     <h1 class="display-1" style="font-family: 'DotGothic16', sans-serif;">ez-sim</h1>
-    <img class="img-fluid w-25 m-5" src="https://lukaszadam.com/assets/downloads/javascript_illustration.svg" class="rounded m-2">
+    <img class="img-fluid m-5" src="https://lukaszadam.com/assets/downloads/javascript_illustration.svg" style="max-width: 400px;">
     <p class="font-monospace mx-auto my-0 fs-4">An online SPICE simulator built on top of PySpice.</p>
     <p class="font-monospace mx-auto my-0 fs-4">Just select the circuit type and give the required inputs!</p>
     <div class="dropdown m-5">
