--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
         <a class="btn btn-dark btn-lg dropdown-toggle px-3 py-2" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
             Choose Circuit
         </a>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="max-height: 300px; overflow-y:auto; scrollbar-width: none">
             {% for key,value in args.list.items() %}
                 <li><a class="dropdown-item" href="{{ url_for('index', item=value) }}">{{ value }}</a></li>
             {% endfor %}
